# build-point-validator

./: .gitignore  .version  README.md  latest_version.json  package-lock.json  package.json  tailwind.config.js
src/: App.vue  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: build.rs  main.rs
src/assets/: point_ref.json  point_ref_v2.json
src/components/: Grid.vue  HelloWorld.vue  InitialPage.vue  LoadingScreen.vue  NavigationHeader.vue
src/components/elements/: CustomSelectElement.vue  SelectElement.vue
src/components/spinners/: ClipLoader.vue  ScaleLoader.vue
src/pages/: Home.vue
src/store/: index.js
src/utils/: dateGenerator.js  fileLoaders.js  helpers.js
