[package]
name = "app"
version = "0.2.0"
description = "point-validator-server"
authors = ["wcrd"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.2", features = [] }

[dependencies]
serde_json = "1.0.82"
serde = { version = "1.0.137", features = ["derive"] }
# tauri = { version = "1.0.2", features = ["dialog-open", "fs-read-binary-file", "fs-read-file", "http-all"] }
tauri = { version = "1.0.2", features = ["dialog-open", "fs-read-file", "http-all"] }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
